--- a/style.css
+++ b/style.css
@@ -23,11 +23,16 @@ body {
 }
 
 .post-title:hover {
-    text-decoration: underline;
+/*    text-decoration: underline;
 }
 
 /* Post grid */
 .posts-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px; /* Consistent spacing */
+    justify-content: center;
+    flex-direction: row;
 }
 
 /* Individual post styling */
