--- a/style.css
+++ b/style.css
@@ -6,4 +6,12 @@
  * email: labrunom@oregonstate.edu
  */
 
-/* Font */
+/* Optional reset */
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
