--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header {
 /* Sidebar */
 .filter-container {
     width: 200px;
-    height: 350px;
+    height: 370px;
     padding: 15px;
     background-color: whitesmoke;
     border-radius: 8px;
@@ -107,6 +107,7 @@ header {
     border-radius: 5px;
     cursor: pointer;
     text-align: center;
+    font-size: 1.5rem;
 }
 
 .action-button:hover {
