--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header {
 .content {
     display: flex;
     padding: 20px;
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
 }
 
